# Flood-AI

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml
ai_service/: README.md  pyproject.toml  test_service.py
ai_service/src/ai_service/: __init__.py  app.py  config.py
ai_service/src/ai_service/api/: __init__.py  routes.py
ai_service/src/ai_service/core/: __init__.py  model.py
ai_service/src/ai_service/models/: flood_model_final.onnx
ai_service/src/ai_service/utils/: __init__.py  image_utils.py
backend_service/: .env.example  .gitignore  OPENROUTE_SETUP.md  README.md  pj-description.md  pj-todo.md  pyproject.toml
backend_service/cache/: Ho_Chi_Minh_City_Vietnam.graphml
backend_service/frontend/: app.js  index.html  styles.css
backend_service/src/backend_service/: __init__.py  ai_service.py  app.py  camera_service.py  config.py  flood_state.py  get_image.py  logger.py  routes.py  routing_service.py  scheduler.py
backend_service/tests/: test_ai_integration.py  test_graphhopper_integration.py  verify_real_integration.py
backend_service/tests/integration/: verify_integration.py
backend_service/tests/unit/: test_api.py  test_routing.py
cache/: Ho_Chi_Minh_City_Vietnam.graphml
dataset/: dataset_camera_day_du.csv
frontend/: README.md  app.js  index.html  styles.css
