[project]
name = "flood-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ai-service",
    "backend-service",
    "numpy>=2.3.5",
]

[tool.uv.workspace]
members = [
    "ai_service",
    "backend_service",
]

[tool.uv.sources]
ai-service = { workspace = true }
backend-service = { workspace = true }
