[project]
name = "ai-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "tuanq", email = "tuanquangkhk@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.9",
    "numpy>=2.3.5",
    "onnxruntime>=1.23.2",
    "pillow>=12.0.0",
]

[project.scripts]
ai-service = "ai_service:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
