[project]
name = "backend-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "tuanq", email = "tuanquangkhk@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
    "httpx>=0.28.1",
    "networkx>=3.6",
    "osmnx>=2.0.7",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
]

[project.scripts]
backend-service = "backend_service:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-mock>=3.15.1",
    "respx>=0.22.0",
]
