[project]
name = "backend-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "tuanq", email = "tuanquangkhk@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "apscheduler>=3.10.0",
    "httpx>=0.28.1",
    "pydantic>=2.0.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "polyline>=2.0.4",
    "pandas>=2.3.3",
]

[project.scripts]
backend-service = "backend_service:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-mock>=3.15.1",
    "respx>=0.22.0",
]
